# Firedetection

./: .gitignore  CMakeLists.txt  README.md  beginbutton.cpp  beginbutton.h  main.cpp  record.md  set.nsi  ui.cpp  ui.h  设计记录.md
Detect/: CMakeLists.txt  detect.cpp  detect.h
Detect/test/: CMakeCache.txt  Makefile  cmake_install.cmake
test/: CMakeCache.txt  Makefile  cmake_install.cmake
test/Demo_autogen/: mocs_compilation.cpp
test/Demo_autogen/EWIEGA46WW/: moc_beginbutton.cpp  moc_beginbutton.cpp.d  moc_ui.cpp  moc_ui.cpp.d
